--- a/app/src/main/res/layout/activity_main_activity4.xml
+++ b/app/src/main/res/layout/activity_main_activity4.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#000000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +27,8 @@
         android:id="@+id/textView11"
         android:layout_below="@+id/editText6"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#000000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,7 +38,8 @@
         android:id="@+id/textView12"
         android:layout_below="@+id/editText7"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#000000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,17 +49,8 @@
         android:id="@+id/textView13"
         android:layout_below="@+id/textView12"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Oblicz"
-        android:id="@+id/button3"
-        android:onClick="Oblicz"
-        android:layout_marginTop="31dp"
-        android:layout_below="@+id/textView13"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#000000" />
 
     <EditText
         android:layout_width="wrap_content"
