--- a/app/src/main/res/layout/activity_main_activity6.xml
+++ b/app/src/main/res/layout/activity_main_activity6.xml
@@ -14,7 +14,8 @@
         android:id="@+id/textView19"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#000000" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -35,7 +36,8 @@
         android:id="@+id/textView20"
         android:layout_below="@+id/editText10"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#000000" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -56,7 +58,8 @@
         android:id="@+id/textView21"
         android:layout_below="@+id/editText11"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#000000" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -66,5 +69,6 @@
         android:id="@+id/textView22"
         android:layout_below="@+id/textView21"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#000000" />
 </RelativeLayout>
