--- a/app/src/main/res/layout/activity_main_activity3.xml
+++ b/app/src/main/res/layout/activity_main_activity3.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.potop66.kalkulatorspalania.klakulatorspalania.MainActivity3">
+    tools:context=".ObliczIloscKupionejBenzyny">
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,13 +20,13 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
         android:ems="10"
         android:id="@+id/editText4"
         android:layout_below="@+id/textView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="kwota" />
+        android:hint="kwota"
+        android:inputType="numberDecimal" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/editText5"
         android:layout_below="@+id/textView7"
