--- a/app/src/main/res/layout/activity_main_activity4.xml
+++ b/app/src/main/res/layout/activity_main_activity4.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.potop66.kalkulatorspalania.klakulatorspalania.MainActivity4">
+    tools:context=".ObliczSpalanieNa100km">
 
     <TextView
         android:layout_width="wrap_content"
@@ -55,7 +55,6 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
         android:ems="10"
         android:id="@+id/editText6"
         android:layout_below="@+id/textView10"
@@ -63,12 +62,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/textView10"
         android:layout_alignEnd="@+id/textView10"
-        android:hint="Spalone paliwo " />
+        android:hint="Spalone paliwo "
+        android:inputType="numberDecimal" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/editText7"
         android:layout_below="@+id/textView11"
