--- a/app/src/main/res/menu/menu_main_activity2.xml
+++ b/app/src/main/res/menu/menu_main_activity2.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.potop66.kalkulatorspalania.klakulatorspalania.MainActivity2">
+    tools:context=".ObliczCeneSpalonejBenzyny">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
