--- a/app/src/main/res/layout/activity_main_activity2.xml
+++ b/app/src/main/res/layout/activity_main_activity2.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Odległość do przejechania"
+        android:text="@string/odlegloscDoPrzejechania"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -23,17 +23,17 @@
         android:inputType="number|numberDecimal"
         android:ems="10"
         android:id="@+id/editText"
-        android:hint="Odległość w km "
+        android:hint="@string/OdlegloscWKm"
         android:layout_below="@+id/textView"
         android:layout_alignRight="@+id/textView"
         android:layout_alignEnd="@+id/textView"
-        android:layout_alignParentStart="false" />
+ />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Cena benzyny"
+        android:text="@string/cenaBenzyny"
         android:id="@+id/textView2"
         android:layout_below="@+id/editText"
         android:layout_alignParentLeft="true"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Liczba spalanych litrów na 100 km "
+        android:text="@string/liczbaSpalonychLitrowNa100Km"
         android:id="@+id/textView3"
         android:layout_below="@+id/editText2"
         android:layout_alignParentLeft="true"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Koszt spalonej benzyny "
+        android:text="@string/kosztSpalonejBenzyny"
         android:id="@+id/textView4"
         android:layout_below="@+id/editText3"
         android:layout_alignParentLeft="true"
@@ -72,7 +72,7 @@
         android:layout_below="@+id/textView4"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:text="0.0"
+        android:text="@string/wrongScore"
         android:textColor="#000000" />
 
     <EditText
@@ -84,7 +84,7 @@
         android:layout_below="@+id/textView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Cena" />
+        android:hint="@string/cena" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -94,7 +94,7 @@
         android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="spalanie"
+        android:hint="@string/spalanie"
         android:inputType="numberDecimal" />
 
 </RelativeLayout>
