--- a/app/src/main/res/layout/activity_main_activity3.xml
+++ b/app/src/main/res/layout/activity_main_activity3.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Kwota wydanych pieniędzy na benzyne"
+        android:text="@string/kwotaWydanychPieniedzyNaBenzyne"
         android:id="@+id/textView6"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -25,14 +25,14 @@
         android:layout_below="@+id/textView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="kwota"
+        android:hint="@string/kwota"
         android:inputType="numberDecimal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Cena benzyny "
+        android:text="@string/cenaBenzyny"
         android:id="@+id/textView7"
         android:layout_below="@+id/editText4"
         android:layout_alignParentLeft="true"
@@ -48,13 +48,13 @@
         android:layout_below="@+id/textView7"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="cena" />
+        android:hint="@string/cena" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Ilość spalonej benzyny w litrach "
+        android:text="@string/iloscSpalonejBenzynyWLitrach"
         android:id="@+id/textView8"
         android:layout_below="@+id/editText5"
         android:layout_alignParentLeft="true"
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="0.0"
+        android:text="@string/wrongScore"
         android:id="@+id/textView9"
         android:layout_below="@+id/textView8"
         android:layout_alignParentLeft="true"
