--- a/app/src/main/res/layout/activity_main_activity4.xml
+++ b/app/src/main/res/layout/activity_main_activity4.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Ilość spalonego paliwa w litrach "
+        android:text="@string/iloscSpalonejBenzynyWLitrach"
         android:id="@+id/textView10"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Ilość przejechanych kilometrów"
+        android:text="@string/iloscPrzejechanychKilometrow"
         android:id="@+id/textView11"
         android:layout_below="@+id/editText6"
         android:layout_alignParentLeft="true"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Spalanie"
+        android:text="@string/spalanie"
         android:id="@+id/textView12"
         android:layout_below="@+id/editText7"
         android:layout_alignParentLeft="true"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="0.0"
+        android:text="@string/wrongScore"
         android:id="@+id/textView13"
         android:layout_below="@+id/textView12"
         android:layout_alignParentLeft="true"
@@ -62,7 +62,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/textView10"
         android:layout_alignEnd="@+id/textView10"
-        android:hint="Spalone paliwo "
+        android:hint="@string/spalonePaliwo"
         android:inputType="numberDecimal" />
 
     <EditText
@@ -76,5 +76,5 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:hint="Przejechane kilometry " />
+        android:hint="@string/przejechaneKilometry" />
 </RelativeLayout>
