--- a/app/src/main/res/layout/activity_main_activity6.xml
+++ b/app/src/main/res/layout/activity_main_activity6.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Spalanie na 100 kilometrów"
+        android:text="@string/spalanieNa100Kilometrow"
         android:id="@+id/textView19"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -25,14 +25,14 @@
         android:layout_below="@+id/textView19"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="spalanie"
+        android:hint="@string/spalanie"
         android:inputType="numberDecimal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Ilość spalonej benzyny"
+        android:text="@string/iloscSpalonejBenzynyWLitrach"
         android:id="@+id/textView20"
         android:layout_below="@+id/editText10"
         android:layout_alignParentLeft="true"
@@ -48,13 +48,13 @@
         android:layout_below="@+id/textView20"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="spalone litry " />
+        android:hint="@string/spalonePaliwo" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Przejechane kilometry"
+        android:text="@string/przejechaneKilometry"
         android:id="@+id/textView21"
         android:layout_below="@+id/editText11"
         android:layout_alignParentLeft="true"
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="0.0"
+        android:text="@string/wrongScore"
         android:id="@+id/textView22"
         android:layout_below="@+id/textView21"
         android:layout_alignParentLeft="true"
