--- a/app/src/main/res/layout/activity_oblicz_ilosc_spalonej_benzyny.xml
+++ b/app/src/main/res/layout/activity_oblicz_ilosc_spalonej_benzyny.xml
@@ -25,9 +25,10 @@
         android:id="@+id/editText"
         android:hint="@string/OdlegloscWKm"
         android:layout_below="@+id/textView"
-        android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -73,6 +74,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:hint="@string/spalanie"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5" />
 
 </RelativeLayout>
